# INF2004-Project

./: .gitignore  README.md
pico-sniffer/: CMakeLists.txt  cmake_install.cmake
pico-sniffer/Tele_Bot/: boot_out.txt  help.txt  settings.toml  tele_bot.py
pico-sniffer/integrated_monitor/: CMakeLists.txt  analyse_packet.c  analyse_packet.h  hw_config.c  integrated_monitor.c
pico-sniffer/integrated_monitor/pico_i2c_slave/: CMakeLists.txt
pico-sniffer/integrated_monitor/pico_i2c_slave/i2c_slaver/: CMakeLists.txt  i2c_slaver.c  i2c_slaver.h
